# uaem.notas.principioslenguajes

./: Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
guias/: guia1.md
notas/: 01. Máqunas abstractas.ipynb  01_lenguajes_máquina.ipynb  01_máqunas_abstractas.ipynb  02_lenguajes_formales.ipynb  03._paradigmas_imperativos.ipynb  04._paradigmas_declarativos.ipynb  geometria.py
practicas/: geometria.py
practicas/Bison/: .gitignore  README.md
practicas/C/: hanoi  hanoi.c
practicas/C++/: .gitignore  bloques.cpp  division.cpp  factorial.cpp  fibgoto.cpp  fibstructured.cpp  pasofunciones  pasofunciones.cpp
practicas/C++/geometria/: ejecutable.cpp  geometria.cpp  geometria.hpp
practicas/ensamblador/hola/: README.md
programas/C/: hola.c
programas/ensamblador/: hola.asm
src/materiales/: notacion.py
src/materiales/lenguajes/: bnf.py  derivaciones.py  ejemplos.py  estructuras.py  gramaticas.py  latex.py  numerabilidad.py
src/materiales/maquinas/: __init__.py  hombre.py  humano.py  pila.py
src/materiales/visualizaciones/: __init__.py  diagramasast.py  hexadecimal.py  utils.py
tareas/: 01_máquinas_abstractas.md  02_lenguajes_formales.md  03_paradigmas_imperativos.md
tests/lenguajes/: test_bnf.py  test_ejemplos.py  test_ejemplos_numerabilidad.py  test_estructuras.py  test_gramaticas.py  test_latex.py  test_numerabilidad.py
tests/maquinas/: test_hombre.py  test_hombre_repr.py  test_pila.py
tests/notacion/: test_notacion.py
tests/visualizaciones/: test_hexadecimal.py  test_utils.py
