[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "materiales"
version = "0.1.0"
description = "Materiales de curso de Principios de Lenguajes de Programación"
authors = [
    {name="Mario Abarca", email="mario.abarca@uaem.edu.mx"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

